--- a/ejemplo3.html
+++ b/ejemplo3.html
@@ -303,7 +303,7 @@
 
             <!-- Slide 2 -->
             <div class="carousel-slide absolute inset-0 transition-all duration-700 ease-in-out opacity-0" data-slide="1">
-              <img src="https://images.unsplash.com/photo-1492106087820-71f1a00d2b2b?q=80&w=1000&auto=format&fit=crop" 
+              <img src="https://plus.unsplash.com/premium_photo-1669675936132-cd68d8a1ac5f?q=80&w=688&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
                    alt="Balayage Premium" 
                    class="w-full h-full object-cover">
               <div class="absolute inset-0 bg-gradient-to-t from-charcoal/20 via-transparent to-transparent"></div>
@@ -311,7 +311,7 @@
 
             <!-- Slide 3 -->
             <div class="carousel-slide absolute inset-0 transition-all duration-700 ease-in-out opacity-0" data-slide="2">
-              <img src="https://images.unsplash.com/photo-1595476108010-b4d1f102b1b1?q=80&w=1000&auto=format&fit=crop" 
+              <img src="https://images.unsplash.com/photo-1580618672591-eb180b1a973f?q=80&w=1000&auto=format&fit=crop" 
                    alt="Peinado para Eventos" 
                    class="w-full h-full object-cover">
               <div class="absolute inset-0 bg-gradient-to-t from-charcoal/20 via-transparent to-transparent"></div>
@@ -319,7 +319,7 @@
 
             <!-- Slide 4 -->
             <div class="carousel-slide absolute inset-0 transition-all duration-700 ease-in-out opacity-0" data-slide="3">
-              <img src="https://images.unsplash.com/photo-1580618672591-eb180b1a973f?q=80&w=1000&auto=format&fit=crop" 
+              <img src="https://images.unsplash.com/photo-1595476108010-b4d1f102b1b1?q=80&w=1000&auto=format&fit=crop" 
                    alt="Tratamiento Capilar" 
                    class="w-full h-full object-cover">
               <div class="absolute inset-0 bg-gradient-to-t from-charcoal/20 via-transparent to-transparent"></div>
@@ -645,7 +645,7 @@
             </div>
           </div>
           <div class="relative overflow-hidden rounded-xl group/mini">
-            <img src="https://images.unsplash.com/photo-1492106087820-71f1a00d2b2b?q=80&w=400&auto=format&fit=crop" 
+            <img src="https://images.unsplash.com/photo-1617391654484-2894196c2cc9?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
                  alt="Coloración" 
                  class="w-full h-20 object-cover group-hover/mini:scale-110 transition-transform duration-500">
             <div class="absolute inset-0 bg-charcoal/40 flex items-center justify-center">
@@ -902,7 +902,7 @@
             Definitivamente la mejor peluquería de Maldonado."
           </p>
           <div class="flex items-center gap-4">
-            <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?q=80&w=100&auto=format&fit=crop&ixlib=rb-4.1.0" 
+            <img src="https://images.unsplash.com/photo-1499952127939-9bbf5af6c51c?q=80&w=1176&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
                  alt="Cliente satisfecha" 
                  class="w-12 h-12 rounded-full object-cover">
             <div>
